[project]
name = "PySDNSim"
version = "1.1.1"
authors = [
  { name="Yifei Ren", email="ryf0510@live.com" },
]
description = "A simulation tool for microservices based SDN, with CloudSim Plus 7.3 as backend."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ulfaric/PySDNSim"
"Bug Tracker" = "https://github.com/ulfaric/PySDNSim/issues"

[tool.setuptools]
packages = ["PySDNSim"]